Signatories for human rights

--- a/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
+++ b/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
@@ -838,7 +838,7 @@ a {
     }
     .mdc-toolbar__title {
         margin: 0;
-        padding: $spacing-unit 0;
+        padding: $spacing-unit 0 $spacing-unit;
         position: relative;
         .brand-logo {
             display: block;
@@ -857,14 +857,14 @@ a {
                 margin-left: 0.5rem;
             }
             .participation::after {
-                font-family: FontAwesome;
-                font-weight: normal;
+                font-family: "Font Awesome\ 5 Pro";
+                font-weight: bold;
                 font-style: normal;
                 display: inline-block;
                 text-decoration: inherit;
                 position: absolute;
-                bottom: 1.5rem;
-                right: 3.2rem;
+                bottom: 1.4rem;
+                right: 3.4rem;
                 font-size: 1.7rem;
                 content: "\f245";
             }
@@ -1498,6 +1498,9 @@ hr {
 }
 
 .signatories main {
+    form {
+        margin-bottom: $spacing-unit*2;
+    }
     h1 {
         font-size: 5.3rem;
         line-height: 5.5rem;
@@ -1506,7 +1509,7 @@ hr {
         padding-right: 2rem;
         .small {
             font-size: 3.8rem;
-            letter-spacing: -.25rem;
+            letter-spacing: -.15rem;
         }
     }
     h4 {
@@ -1516,6 +1519,11 @@ hr {
     h4.sort {
         text-align: right;
         margin-right: $spacing-unit/2;
+    }
+    .digital-charter-signatory {
+        h3 {
+            margin: $spacing-unit 0;
+        }
     }
     .signatory {
         background: white;
