--- a/functions/test-db/json2/digitalparticipation/templates/layout.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/layout.hbs
@@ -21,7 +21,8 @@
     <meta name="msapplication-TileColor" content="#00838f">
     <meta name="msapplication-TileImage" content="https://storage.cloud.google.com/digitalparticipation/images/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
-    <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <style type="text/css">
     {{{this.css}}}
     </style>
@@ -53,7 +54,7 @@
                                     <a class="mdc-tab" href="/resources">Resources</a>
                                 </nav>
                                 <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="menu_draw.MDCTemporaryDrawer.open = true">
-                                    <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
+                                    <span class="far fa-2x fa-bars" aria-hidden="true"></span>
                                 </button>
                             </section>
                         </div>
@@ -122,7 +123,7 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
     <script type="text/javascript">
     // Material Design Components
     mdc.autoInit();
