--- a/functions/test-db/json2/scvo/templates/post-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/post-head-tags.hbs
@@ -10,6 +10,8 @@
 
         {{#ifAny og_image ../og_image}}
             <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
+            <meta property="og:image:width" content="96" data-dynamic="true">
+            <meta property="og:image:height" content="96" data-dynamic="true">
         {{/ifAny}}
 
         <meta property="og:type" content="article" data-dynamic="true">
