--- a/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/signatory-search.hbs
@@ -1,40 +1,45 @@
-<h1>Signatories</h1>
+<div class="signatories">
+    <h1>Signatories <span class="small">({{supplimentaryResponses.total.hits.total}})</span></h1>
 
-<form [searchroute]="'signatory_search'">
-    <div class="mdc-layout-grid">
+    <form [searchroute]="'signatory_search'" data-auto-search="true">
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+                    <h4>Search</h4>
+                    <div class="mdc-textfield mdc-textfield--upgraded keywords" data-mdc-auto-init="MDCTextField">
+                        <input type="text" class="mdc-textfield__input" name="q" id="keywords" value="{{params.query.q}}" placeholder="Search for a declaration signatory">
+                        <div class="mdc-textfield__bottom-line"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+                    <h4>Total signatories found: {{primaryResponse.hits.total}}</h4>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+                    <h4 class="sort">Sort</h4>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                    <div class="mdc-form-field sort">
+                        <select class="mdc-select" role="listbox" id="sort" name="sort">
+                            <option value="" {{#if params.query.sort}}{{else}}selected{{/if}}>Date signed</option>
+                            <option value="AZ" {{#if params.query.sort}}selected{{else}}{{/if}}>Alphabetical</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <div class="mdc-layout-grid signatories-search">
         <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell">
-                <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextField">
-                    <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" value="{{params.query.q}}">
-                    <label class="mdc-textfield__label" for="events-keywords">Keywords</label>
-                    <div class="mdc-textfield__bottom-line"></div>
-                </div>
+            {{#each primaryResponse.hits.hits}}
+            <div class="mdc-layout-grid__cell signatory inner mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-phone">
+                {{{_source.rendered.humanrightsdeclaration_search_result}}}
             </div>
-            <div class="mdc-layout-grid__cell">
-                <div class="mdc-form-field">
-                    <select class="mdc-select" role="listbox" id="events-type" name="course_type">
-                        <option value="" {{#if params.query.type}}{{else}}selected{{/if}}>Select type</option>
-                        {{#each supplimentaryResponses.types.aggregations.types.buckets}}
-                        <option value="{{key}}" {{#compare ../params.query.type "===" key}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
-                        {{/each}}
-                    </select>
-                </div>
-            </div>
+            {{/each}}
         </div>
     </div>
-    <button class="mdc-button mdc-button--raised" type="submit">
-        Search
-    </button>
-</form>
 
-<div class="mdc-layout-grid signatories">
-    <div class="mdc-layout-grid__inner">
-        {{#each primaryResponse.hits.hits}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-            {{{_source.rendered.search_result_logo}}}
-        </div>
-        {{/each}}
-    </div>
+    {{> pagination}}
 </div>
-
-{{> pagination paging=paging params=params}}
