--- a/functions/test-db/json2/humanrightsdeclaration/templates/signatory.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/signatory.hbs
@@ -1,1 +1,1 @@
-{{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
+{{{primaryResponse.hits.hits.[0]._source.rendered.humanrightsdeclaration_full}}}
