Added more redirects

--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -91,13 +91,13 @@
                                 <a href="http://scvo.org" class="brand-logo" title="The Scotland Declaration on Human Rights">
                                     <img src="assets/images/scvo-logo.png" />
                                 </a>
-                                <a href="https://www.equalityhumanrights.com/en" class="brand-logo" title="Equality Human Rights Scotland">
+                                <a href="https://www.equalityhumanrights.com" class="brand-logo" title="Equality Human Rights Scotland">
                                     <img src="https://storage.googleapis.com/human-rights-declaration/ehrc-logo.svg" />
                                 </a>
-                                <a href="http://www.scottishhumanrights.com/" class="brand-logo" title="Scottish HumanRights Commission">
+                                <a href="http://www.scottishhumanrights.com" class="brand-logo" title="Scottish Human Rights Commission">
                                     <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none;height:44px;" />
                                 </a>
-                                <a href="https://hrcscotland.org/" class="brand-logo" title="Human Rights Consortium Scotland">
+                                <a href="https://hrcscotland.org" class="brand-logo" title="Human Rights Consortium Scotland">
                                     <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" />
                                 </a>
                             </div>
@@ -105,8 +105,8 @@
                                 <p>
                                     The Scotland Declaration on Human Rights is built and managed by the
                                     <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
-                                    with support from Human Rights Consortium Scotland, Scottish Human Rights
-                                    Commission and the Equality and Human Rights Commission
+                                    with support from <a href="https://hrcscotland.org">Human Rights Consortium Scotland</a>, <a href="http://www.scottishhumanrights.com">Scottish Human Rights
+                                    Commission</a> and the <a href="https://www.equalityhumanrights.com">Equality and Human Rights Commission</a>
                                 </p>
                                 <p class="copyright">
                                     &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations
