Search result highlights

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2019,6 +2019,11 @@ p:last-child {
 .l-margin { margin-left: $spacing-unit/2; }
 .r-margin { margin-right: $spacing-unit/2; }
 
+p.results-highlights em {
+    font-weight: bolder;
+    font-style: normal;
+}
+
 .horizontal-list-details {
     display: flex;
     padding: 0 0 0;
