--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -22,7 +22,7 @@
             <li>Events</li>
         </ul>
 
-        <h2 class="mdc-card__title mdc-card__title--large">Find Events</h2>
+        <h2>Find Events</h2>
         <form [searchroute]="'event_search'" data-auto-search="true">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
