--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -52,11 +52,11 @@
                                     <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search" id="q" name="q" aria-label="Search keywords" value="{{params.query.q}}">
                                 </div>
                                 <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search" aria-label="Search" alt="Search">
-                                    <span class="fa fa-search" aria-hidden="true"></span>
+                                    <span class="far fa-search" aria-hidden="true"></span>
                                 </button>
                             </form>
                             <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" id="menu_button" aria-label="Menu" alt="Menu">
-                                <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
+                                <span class="far fa-2x fa-bars" aria-hidden="true"></span>
                             </button>
                         </section>
                     </div>
